Setting port to 8082